--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "project",
+  "name": "web-design",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch" : "npx tailwindcss -i ./assets/tailwind/main.css -o ./assets/css/style.css --watch"
+    "watch": "npx tailwindcss -i ./assets/tailwind/main.css -o ./assets/css/style.css --watch",
+    "start": "npx live-server ."
   },
   "keywords": [],
   "author": "",
